[tool.poetry]
name = "tf-fibonacci"
version = "0.1.0"
description = ""
authors = ["soeren berg <soeren.berg@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "^2.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-sugar = "^0.9.4"
yapf = "^0.31.0"
pylint = "^2.9.3"
flake8 = "^3.9.2"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
